# ai-sub-invest

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml  start_docker.sh
.claude/skills/michael-burry/scripts/: analyze.py
.claude/skills/news-sentiment/scripts/: analyze.py
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
docs/: USER_GUIDE.md  data_inventory.md  verification_report.md
scripts/: fetch_openinsider_fixtures.py  fetch_test_fixtures.py  fetch_yfinance_fixtures.py  verify_free_backend.py
src/: sdk_main.py
src/data/: models.py
src/data_sources/: aggregator.py  cache.py  computed.py  openinsider.py  sec_edgar.py  yfinance_adapter.py
src/tools/: api.py
tests/integration/: test_aggregator_real.py  test_persona_compatibility.py
tests/unit/: test_aggregator.py  test_cache.py  test_computed.py  test_openinsider.py  test_sec_edgar.py  test_yfinance_adapter.py
tests/unit/fixtures/openinsider/: NVDA_screener.html  VTI_screener.html  broken_NVDA_screener.html
tests/unit/fixtures/sec/: AAPL_submissions.json  NVDA_submissions.json
tests/unit/fixtures/yfinance/: MSFT_history.pkl  MSFT_info.json  NVDA_history.pkl  NVDA_info.json
