[project]
name = "ai-sub-invest"
license = "MIT"
version = "1.0.0"
description = "ConsensusAI - Multi-analyst investment analysis using Claude Code Skills"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.0.25",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "httpx>=0.27.0",
    "requests>=2.32.5",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no network",
    "integration: hits real APIs, requires SEC_EDGAR_USER_AGENT and network",
    "expected_divergence: A/B test where free backend output differs from paid (intentional)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
